@@ -12,4 +12,4 @@ Put a Site access rule in root of your plone site.
      request = container.REQUEST
      if request['HTTP_ACCEPT'].startswith('application/rdf+xml'):
         stack = context.REQUEST['TraversalRequestNameStack']
-	   stack.insert(0,'@@rdf')
+        stack.insert(0,'@@rdf')
